--- a/css/waw-custom.css
+++ b/css/waw-custom.css
@@ -82,6 +82,11 @@
 .map_img {
   padding-top: 0px;
 }
+
+.nobreak {
+  white-space: nowrap;
+}
+
 /*.row.display-flex {
   display: flex;
   flex-wrap: wrap;
