--- a/css/waw-custom.css
+++ b/css/waw-custom.css
@@ -25,9 +25,15 @@
   border-top: 0;
 }
 
+body ul.more_resources {
+  padding-left: 20px;
+}
+
+body ul.more_resources li,
 .additional_resources_list {
   font-size: .875rem;
-  margin-left:60px;
+  line-height: 1.25rem;
+  margin: 0 0 10px;
 }
 
 .card_tile {
@@ -92,6 +98,10 @@
   line-height: 1.0em;
 }
 
+.lp__link_list {
+  list-style: disc; /* restore */
+}
+
 .indicators-list h6 {
   margin-top: 1em;
   margin-bottom: 0;
@@ -101,6 +111,10 @@
   font-size: 0.75em;
   line-height: 1.5em;
   margin-bottom: 0.5em;
+}
+
+.lp__body_content h3 {
+  margin-top: 40px;
 }
 
 /* END ESG styles added by Tim */
