--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,31 +27,7 @@
         <script type='text/javascript' src='https://dataviz.worldbank.org/javascripts/api/viz_v1.js'></script>
 {% endif %}
 		<script src="//assets.adobedtm.com/572ee9d70241b5c796ae15c773eaaee4365408ec/satelliteLib-efd6120a6f6ed94da49cf49e2ba626ac110c7e3c.js"></script>
-		<script type="text/JavaScript">
-			var wbgData = wbgData || {};
-			wbgData.page = {
-				pageInfo: {
-						pageName: "waw:vignette:wastemanagementtrends",
-						pageCategory: "content page",
-						contentType: "Stories",
-						channel: "DEC waw EXT"
-					}
-			},
-			wbgData.site = {
-				siteInfo: {
-						siteLanguage: "en",
-						siteType: "waw",
-						siteEnv: "prod"
-				},
-				techInfo: {
-						cmsType: "sharepoint",
-						bussVPUnit: "dec",
-						bussUnit: "decdg",
-						bussUserGroup: "external",
-						bussAgency: "ibrd"
-				}
-			}
-		</script>
+{% include analytics.html %}
 	</head>
 
 <body>
@@ -842,9 +818,8 @@
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 	<script src='js/megamenu-min.js' type="text/javascript"></script>
-	<script type="text/javascript">
-		_satellite.pageBottom();
-	</script>
+{% include javascript.html %}
+	<script type="text/javascript"> _satellite.pageBottom(); </script>
 </body>
 
 </html>
