Lots more edits

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -10,19 +10,19 @@
 						pageName: "en:esg:{{ _pageName }}",
 						pageCategory: "{{ page.pageCategory }}",
 						contentType: "Data",
-						channel: "DEC waw EXT"
+						channel: "FCI ESG EXT"
 					}
 			},
 			wbgData.site = {
 				siteInfo: {
 						siteLanguage: "en",
-						siteType: "waw",
+						siteType: "ESG",
 						siteEnv: "{{ site.siteEnvironment }}"
 				},
 				techInfo: {
-						cmsType: "sharepoint",
-						bussVPUnit: "dec",
-						bussUnit: "decdg",
+						cmsType: "jekyll",
+						bussVPUnit: "gge",
+						bussUnit: "gfclt",
 						bussUserGroup: "external",
 						bussAgency: "ibrd"
 				}
