--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/clientlibs-wbrredsign.min.css">
 		<!-- <link rel="stylesheet" type="text/css" href="http://theloop.worldbank.org/content/dam/loop/assets/css/loop.min.css"> -->
 		<link rel="stylesheet" type="text/css" href="./css/loop.min.css">
-		<link rel="stylesheet" type="text/css" href="css/waw-custom.css">
+		<link rel="stylesheet" type="text/css" href="css/esg-custom.css">
 		<!-- <link rel="stylesheet" type="text/css" href="http://theloop.worldbank.org/content/dam/loop/assets/js/loop.js"> -->
 		<script src="https://theloop.worldbank.org/content/dam/loop/assets/js/loop.js"></script>
 {% if page.dataviz %}
