--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ pageCategory: home
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/clientlibs-wbrredsign.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/loop.min.css">
-		<link rel="stylesheet" type="text/css" href="css/waw-custom.css">
+		<link rel="stylesheet" type="text/css" href="css/esg-custom.css">
         <script type='text/javascript' src='https://dataviz.worldbank.org/javascripts/api/viz_v1.js'></script>
 		<script src="//assets.adobedtm.com/572ee9d70241b5c796ae15c773eaaee4365408ec/satelliteLib-efd6120a6f6ed94da49cf49e2ba626ac110c7e3c.js"></script>
 {% include analytics.html %}
