--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/loop.min.css">
 		<link rel="stylesheet" type="text/css" href="css/esg-custom.css">
 		<!-- <link rel="stylesheet" type="text/css" href="http://theloop.worldbank.org/content/dam/loop/assets/js/loop.js"> -->
-		<script src="https://theloop.worldbank.org/content/dam/loop/assets/js/loop.js"></script>
-{% if page.dataviz %}
-        <script type='text/javascript' src='https://dataviz.worldbank.org/javascripts/api/viz_v1.js'></script>
-{% endif %}
-		<script src="//assets.adobedtm.com/572ee9d70241b5c796ae15c773eaaee4365408ec/satelliteLib-efd6120a6f6ed94da49cf49e2ba626ac110c7e3c.js"></script>
+{% include scripts.html %}
 {% include analytics.html %}
 	</head>
 
