More content updates

--- a/css/esg-custom.css
+++ b/css/esg-custom.css
@@ -123,13 +123,18 @@ body ul.more_resources li,
   line-height: 1.0em;
 }
 
-.lp__link_list {
+.lp__link_list, .lp__body_content ul, .lp__body_content ol {
   list-style: disc; /* restore */
+  margin: 0 0 16px;
 }
 
 .indicators-list h6 {
   margin-top: 1em;
   margin-bottom: 0;
+}
+
+.indicators-list ul {
+  list-style: none;
 }
 
 .indicators-list ul ul {
@@ -148,6 +153,7 @@ body ul.more_resources li,
 
 .lp__card_wrapper {
   border-top: none;
+  margin-bottom: 0;
 }
 
 .staff-profile img {
