Implement team and ECR review changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<meta name="description" content=""/>
-		<title>{{ page.title }} | Environment Social Governance Data | World Bank</title>
+		<title>{{ page.title }} | Sovereign Environment Social Governance Data | World Bank</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 		  crossorigin="anonymous">
@@ -489,7 +489,7 @@
 			<div class="container banner-container">
 				<div class="row">
 					<div class="lp__banner_img_overlay_v1 col-xl-10 col-lg-10 col-md-12 col-sm-12 col-xs-12">
-						<h1 class="lp__banner_title">Environment Social Governance Data</h1>
+						<h1 class="lp__banner_title"><span class="lp__banner_description">Sovereign<br/></span>Environment Social Governance Data</h1>
 						<p class="lp__banner_description">Data, Tools and Guidance</p>
 					</div>
 				</div>
