--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<meta name="description" content=""/>
-		<title>Environment, Social and Governance Data | World Bank</title>
+		<title>Sovereign Environmental, Social, and Governance Data | World Bank</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 		  crossorigin="anonymous">
