Latest fixes and updates

--- a/css/esg-custom.css
+++ b/css/esg-custom.css
@@ -11,6 +11,7 @@
 
   .lp__banner_description {
     font-size: 1.75rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -26,6 +27,7 @@
 
   .lp__banner_description {
     font-size: 2.5rem;
+    line-height: 2.5rem;
   }
 }
 
