--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -44,4 +44,4 @@ function toggleclass(element,elemMore){
     }
 }
 </script>
-
+<script src="//theloop.worldbank.org/content/dam/loop/assets/js/vendor/loop.js"></script>
