--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -812,8 +812,10 @@
 			</footer>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
 	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
-	<script src='js/megamenu-min.js' type="text/javascript"></script>
+	<!-- <script src='js/megamenu-min.js' type="text/javascript"></script> -->
+
 {% include javascript.html %}
 	<script type="text/javascript"> _satellite.pageBottom(); </script>
 </body>
