--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,4 @@
-		<script type="text/JavaScript">
+<script type="text/javascript">
 {% if page.url == "/" %}
 {% assign _pageName = "/index.html" %}
 {% else %}
@@ -27,4 +27,4 @@
 						bussAgency: "ibrd"
 				}
 			}
-		</script>
+</script>
