--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,26 +2,8 @@
 <html lang="en">
 
 	<head>
-		<link rel="shortcut icon" href="http://www.worldbank.org/content/dam/wbr/logo/wbg-favicon.png" type="image/png"
-		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
-		/>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<meta name="description" content=""/>
 		<title>{{ page.title }} | Sovereign Environment Social Governance Data | World Bank</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-		  crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<!-- <link rel="stylesheet" type="text/css" href="http://www.worldbank.org/etc/designs/wbrrdesign/clientlibs-wbrredsign.min.css">
-		<link rel="stylesheet" type="text/css" href="http://theloop.worldbank.org/content/dam/loop/assets/css/loop.min.css"> -->
-		<!-- <link rel="stylesheet" type="text/css" href="http://www.worldbank.org/etc/designs/wbrrdesign/clientlibs-wbrredsign.min.css"> -->
-		<link rel="stylesheet" type="text/css" href="./css/clientlibs-wbrredsign.min.css">
-		<!-- <link rel="stylesheet" type="text/css" href="http://theloop.worldbank.org/content/dam/loop/assets/css/loop.min.css"> -->
-		<link rel="stylesheet" type="text/css" href="./css/loop.min.css">
-		<link rel="stylesheet" type="text/css" href="css/esg-custom.css">
-		<!-- <link rel="stylesheet" type="text/css" href="http://theloop.worldbank.org/content/dam/loop/assets/js/loop.js"> -->
+
 {% include scripts.html %}
 {% include analytics.html %}
 	</head>
@@ -698,7 +680,7 @@
 												<div class="footer-newsletter">
 													<h4>newsletter</h4>
 													<div class="search-section">
-														<form action="http://www.worldbank.org/en/newsletter-subscription" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group mySignUpFormDesktop" target="_blank" accept-charset="UTF-8" novalidate="">
+														<form action="//www.worldbank.org/en/newsletter-subscription" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group mySignUpFormDesktop" target="_blank" accept-charset="UTF-8" novalidate="">
 															<input type="text" onfocus="value=''" placeholder="Enter email to subscribe..." class="search-input-field-1" id="fields_email" name="email" title="search" data-form="newsletter:subscription">
 															<input class="search-submit-icon" name="subscribe" id="mc-embedded-subscribe" type="image" src="img/angle-right-white.svg" alt="listingsearch" data-form="newsletter:subscription">
 														</form>
@@ -810,14 +792,8 @@
 					</div>
 				</div>
 			</footer>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
-	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
-	<!-- <script src='js/megamenu-min.js' type="text/javascript"></script> -->
 
 {% include javascript.html %}
-	<script type="text/javascript"> _satellite.pageBottom(); </script>
 </body>
 
 </html>
