--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,3 +1,10 @@
+<!-- javascript code for the footer -->
+
+<!-- <script src="//theloop.worldbank.org/content/dam/loop/assets/js/vendor/loop.js"></script> -->
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+<!-- <script src='js/megamenu-min.js' type="text/javascript"></script> -->
 
 <script type="text/javascript">
 
@@ -44,4 +51,5 @@ function toggleclass(element,elemMore){
     }
 }
 </script>
-<script src="//theloop.worldbank.org/content/dam/loop/assets/js/vendor/loop.js"></script>
+
+<script type="text/javascript"> _satellite.pageBottom(); </script>
